add signature adding processor that works for both signed and unsigned messages, add key adding processor:
- add WonMessageSignerVerifier to work directly on Won messages for signing-verifying, where the signing procedure depends on the signing stage of the won message
- modify processor for checking signatures to use WonMessageSignerVerifier
- add processor for adding signatures
- add processor for generating keys for newly created needs and inserting their  public key as RDF into the  need data
- make KeyStoreService thread-safe
- make usage of Signingframework's algorithms thread-safe
- update test cases and examples
- update version of bouncycastle library